--- a/WiredBrainCoffee.CustomersApp/View/CustomersView.xaml
+++ b/WiredBrainCoffee.CustomersApp/View/CustomersView.xaml
@@ -25,7 +25,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal">
-                <Button Margin="10" Width="85">
+                <Button Margin="10" Width="85" Click="btnAdd_Click">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="/Images/add.png" Height="18" Margin="0 0 0 0"/>
                         <TextBlock  Text="Add"/>
@@ -36,8 +36,10 @@
                     <Image Source="/Images/move.png" Height="18"/>
                 </Button>
             </StackPanel>
-            <ListView x:Name="customerListView" 
-                      ItemsSource="{Binding Customers}"
+            <ListView ItemsSource="{Binding Customers}"
+                      SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}"
+                      DisplayMemberPath="FirstName"
+                      Grid.Row="1"
                       Margin="10 0 10 10"/>
 
 
@@ -46,12 +48,14 @@
         <!-- Customer detail -->
         <StackPanel  Grid.Column="1" Margin="10">
             <Label>Firstname:</Label>
-            <TextBox Text="{Binding ElementName=customerListView, 
-                Path=SelectedItem.Content, Mode=TwoWay, 
+            <TextBox Text="{Binding SelectedCustomer.FirstName, Mode=TwoWay, 
                 UpdateSourceTrigger=PropertyChanged}"/>
             <Label>Lastname:</Label>
-            <TextBox/>
-            <CheckBox Margin="0 10 0 0">
+            <TextBox Text="{Binding SelectedCustomer.LastName, Mode=TwoWay, 
+                UpdateSourceTrigger=PropertyChanged}"/>
+            <CheckBox IsChecked="{Binding SelectedCustomer.IsDeveloper, Mode=TwoWay, 
+                UpdateSourceTrigger=PropertyChanged}"
+                Margin="0 10 0 0">
                 Is developer
             </CheckBox>
         </StackPanel>
