--- a/WiredBrainCoffee.CustomersApp/View/CustomersView.xaml
+++ b/WiredBrainCoffee.CustomersApp/View/CustomersView.xaml
@@ -3,9 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WiredBrainCoffee.CustomersApp.View"
+             xmlns:local="clr-namespace:WiredBrainCoffee.CustomersApp.View" 
+             xmlns:converter="clr-namespace:WiredBrainCoffee.CustomersApp.Converter"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <converter:NavigationSideToGridColumnConverter x:Key="NavigationSideToGridColumnConverter"/>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -18,21 +23,23 @@
 
 
         <!-- Customer list -->
-        <Grid x:Name="customerListGrid"
-             Background="#777">
+        <Grid Grid.Column="{Binding NavigationDirection, 
+            Converter={StaticResource NavigationSideToGridColumnConverter}}" 
+            Background="#777">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal">
-                <Button Margin="10" Width="85" Click="btnAdd_Click">
+                <Button Margin="10" Width="85" Command="{Binding AddCommand}">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="/Images/add.png" Height="18" Margin="0 0 0 0"/>
                         <TextBlock  Text="Add"/>
                     </StackPanel>
                 </Button>
-                <Button Content="Delete" Width="75" Margin="0 10 10 10" />
-                <Button Margin="0 10 10 10" Click="ButtonMoveNavigation_Click">
+                <Button Content="Delete" Width="75" Margin="0 10 10 10" 
+                        Command="{Binding DeleteCommand}"/>
+                <Button Margin="0 10 10 10" Command="{Binding MoveNavigationCommand}">
                     <Image Source="/Images/move.png" Height="18"/>
                 </Button>
             </StackPanel>
