--- a/WiredBrainCoffee.CustomersApp/View/CustomersView.xaml
+++ b/WiredBrainCoffee.CustomersApp/View/CustomersView.xaml
@@ -9,6 +9,12 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <converter:NavigationSideToGridColumnConverter x:Key="NavigationSideToGridColumnConverter"/>
+        <DataTemplate x:Key="CustomerDataTemplate">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding FirstName}" FontWeight="Bold"/>
+                <TextBlock Text="{Binding LastName}" Margin="5 0 0 0"/>
+            </StackPanel>
+        </DataTemplate>
     </UserControl.Resources>
 
     <Grid>
@@ -25,7 +31,7 @@
         <!-- Customer list -->
         <Grid Grid.Column="{Binding NavigationDirection, 
             Converter={StaticResource NavigationSideToGridColumnConverter}}" 
-            Background="#777">
+            Background="#777" Width="260">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
@@ -44,19 +50,22 @@
                 </Button>
             </StackPanel>
             <ListView ItemsSource="{Binding Customers}"
-                      SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}"
-                      DisplayMemberPath="FirstName"
+                      SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}" 
+                      ItemTemplate="{StaticResource CustomerDataTemplate}"
                       Grid.Row="1"
                       Margin="10 0 10 10"/>
+
 
 
         </Grid>
 
         <!-- Customer detail -->
-        <StackPanel  Grid.Column="1" Margin="10">
+        <StackPanel  Grid.Column="1" Margin="10" 
+                     Visibility="{Binding IsCustomerSelected, 
+                                    Converter={StaticResource BooleanToVisibilityConv}}">
             <Label>Firstname:</Label>
             <TextBox Text="{Binding SelectedCustomer.FirstName, Mode=TwoWay, 
-                UpdateSourceTrigger=PropertyChanged}"/>
+                            UpdateSourceTrigger=PropertyChanged}"/>
             <Label>Lastname:</Label>
             <TextBox Text="{Binding SelectedCustomer.LastName, Mode=TwoWay, 
                 UpdateSourceTrigger=PropertyChanged}"/>
