--- a/WiredBrainCoffee.CustomersApp/View/ProductsView.xaml
+++ b/WiredBrainCoffee.CustomersApp/View/ProductsView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="Producta"
+        <TextBlock Text="Products"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"/>
 
